# PyDV

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  curve_control_cmds.rst  curve_inquiry_cmds.rst  env_inquiry_cmds.rst  getting_started.rst  index.rst  math_operations.rst  pydv.rst  release_notes.rst  requirements.txt  ui_features.rst
pydv/: __init__.py  curve.py  pdv.py  pdv_launcher.py  pdvplot.py  pdvutil.py  pydvpy.py
pydv/scripts/: date.txt  update_version_and_date.py
tests/: convolution_create_pydv_and_ultra_commands.py  convolution_pydv_create_curves_to_convolv  curve.ult  curve_x_tick_data.ult  curve_x_tick_data2.ult  diff_formats.txt  generate_ultra_curves_big.py  medium_recs_test.hdf5  medium_recs_test.json  my_custom_functions.py  single_point.ult  step.ult  test.hdf5  test.json  testData.ult  testDataLog.ult  testDataregex.ult  testSinaData.json  testSinaData2.json  testSinaData_mult_ind.json  test_pdv.py  test_pydv_images.py  test_pydvpy.py
