[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDV"
version = "3.10.0"
description = "PyDV: Python Data Visualizer"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD" }
authors = [
  { name = "Jorge Moreno", email = "moreno45@llnl.gov" },
  { name = "Sarah El-Jurf", email = "eljurf1@llnl.gov" },
  { name = "Ephraim Rusu", email = "rusu1@llnl.gov" },
]
maintainers = [
  { name = "Jorge Moreno", email = "moreno45@llnl.gov" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
  "pyside6<=6.9.3",
  "h5py",
]

[project.urls]
Homepage = "https://github.com/LLNL/PyDV"
Documentation = "https://pydv.readthedocs.io/en/latest/"
Issues = "https://github.com/LLNL/PyDV/issues"
Discussions = "https://github.com/LLNL/PyDV/discussions"

[project.scripts]
pdv = "pydv.pdv:main"

[project.optional-dependencies]
dev = [
  "sphinx_rtd_theme",
  "sphinx",
  "pytest",
  "sphinx-autoapi",
  "six",
  "scikit-image",
  "imageio",
  "pre-commit",
  "ruff",
  "ty",
  "coverage",
  "pytest-cov"
]

[tool.setuptools]
packages = ["pydv"]
include-package-data = true

[tool.setuptools.package-data]
pydv = ["img/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "RUF"]
ignore = ["E722"]
